@@ -8,3 +8,21 @@
 body {
   background-color: lightblue;
 }
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.searchText, .buttonContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.inputBox {
+  width: 300px;
+  height: 25px;
+  border-radius: 8px;
+}
